First draft for Sep 2020 issue.

--- a/pnsac/newsletter/article_ContactInfo.tex
+++ b/pnsac/newsletter/article_ContactInfo.tex
@@ -34,8 +34,9 @@ Director, President\\
 \address{Garry Dupont\\
 Director, Vice President}\\
 
-\address{Roger Button\\
-Director, Corporate Secretary, NStar Chronicle Editor}\\
+\address{Rpger Buttom\\
+Director, Corporate Secretary, NStar Chronicle Editor\\
+\email{editor@projectnorthstar.ca}}
 
 \address{Phil Chrysler\\
 Director, Merchandise}\\
@@ -77,7 +78,8 @@ Treasurer\\
 %\end{minipage}
 
 
-\subsection{NStar Chronicle\protect\footnotetext{This newsletter is typeset using
+\subsection{NStar Chronicle\protect\footnotetext{This newsletter is typeset
+using
     \LaTeX.  The style package used for the newsletter (PNSAC.sty) is
     a modification of GRASSnews.sty belonging to the Geographic
     Analysis Resources Support System (GRASS). The modification was
