--- a/pnsac/newsletter/article_Feature2.tex
+++ b/pnsac/newsletter/article_Feature2.tex
@@ -14,78 +14,57 @@ our attention. This article is republished with the kind permission of
 the publishers of the magazine and the author Dr. Jakob Whitfield.}\\
 
 
-The earliest Merlins to operate in a civil mode were the Merlin T24
-series, developed in 1944. These were single-stage twin-speed units
-similar to the Merlin 24s fitted to the RAF's Lancasters, but were
-modified to improve service life, and were fitted to Transport
-Command's Avro Yorks. Long-range transport operation entailed running
-at relatively low cruise powers for long periods---under these
-conditions the lower cylinder head temperatures caused deposits of lead
-oxide from the fuel, resulting in excessive spark plug fouling. To
-counter this, the Merlin T24/4 incorporated a charge heater to increase
-the inlet temperature. Post-war, the Merlin 500 series essentially
-comprised civil and export versions of the T24, incorporating its
-modifications, though only the Merlin 501 included a charge heater.
+The earliest Merlins to operate in a civil mode were the Merlin T24 series,
+developed in 1944. These were single-stage twin-speed units similar to the
+Merlin 24s fitted to the RAF's Lancasters, but were modified to improve service
+life, and were fitted to Transport Command's Avro Yorks. Long-range transport
+operation entailed running at relatively low cruise powers for long periods —
+under these conditions the lower cylinder head temperatures caused deposits of
+lead oxide from the fuel, resulting in excessive spark plug fouling. To counter
+this, the Merlin T24/4 incorporated a charge heater to increase the inlet
+temperature. Post-war, the Merlin 500 series essentially comprised civil and
+export versions of the T24, incorporating its modifications, though only the
+Merlin 501 included a charge heater.
 
-\begin{figure}[httb]
-   \vspace{2em}
-   \centering
-   \includegraphics [scale=0.5]{merlin-1-feb-2020.jpg}
-   \caption*{\small \em Rolls-Royce Merlin Engine}
-   \label{fig:wall-two}
-\end{figure}
+The 600 and 700-series engines were two-speed two-stage engines, based on the
+military 100-series. They were fitted with the so-called 'transport heads and
+banks', strengthened for greater reliability. Most marks had some form of
+variable intercooling to allow for charge heating to reduce plug fouling under
+cruise conditions. Initially the system was plagued by coolant leaks, but as
+experience showed that zero intercooling at cruise allowed enough charge
+heating to reduce leading, a simple stop valve was fitted to the system. This
+allowed full intercooling for take-off and climb, which could then be turned
+off for cruise. 
 
-The 600 and 700-series engines were two-speed two-stage engines, based
-on the military 100-series. They were fitted with the so-called
-'transport heads and banks', strengthened for greater reliability. Most
-marks had some form of variable intercooling to allow for charge
-heating to reduce plug fouling under cruise conditions. Initially the
-system was plagued by coolant leaks, but as experience showed that zero
-intercooling at cruise allowed enough charge heating to reduce leading,
-a simple stop valve was fitted to the system. This allowed full
-intercooling for take-off and climb, which could then be turned off for
-cruise.
-
-Civil Merlins were fitted to Avro Lancastrians, Yorks and Tudors, but
-their flagship role was on the Canadair DC-4M North Star, a Douglas
-DC-4-derived design intended for Trans-Canada Air Lines (TCA). The
-North Stars used a modified Universal Power Plant installation, as the
-DC-4's nacelle bulkheads were slightly larger than the SBAC standard.
-In practice it turned out the Merlins were not ideally suited for use
-in civil operations: though the North Stars flew higher and faster than
-DC-4s, their time between engine overhauls was around 850 hours,
-roughly a third of that of commercial US radial engines. The engines
-also produced a lot of cabin noise, though this was alleviated somewhat
-by revised 'cross-over' exhausts that ducted the cabin-side stacks
+Civil Merlins were fitted to Avro Lancastrians, Yorks and Tudors, but their
+flagship role was on the Canadair DC-4M North Star, a Douglas DC-4-derived
+design intended for Trans-Canada Air Lines (TCA). The North Stars used a
+modified Universal Power Plant installation, as the DC-4's nacelle bulkheads
+were slightly larger than the SBAC standard. In practice it turned out the
+Merlins were not ideally suited for use in civil operations: though the North
+Stars flew higher and faster than DC-4s, their time between engine overhauls
+was around 850 hours, roughly a third of that of commercial US radial engines.
+The engines also produced a lot of cabin noise, though this was alleviated
+somewhat by revised 'cross-over' exhausts that ducted the cabin-side stacks
 outboard, developed first by TCA and then by Rolls-Royce themselves.
 
-\begin{figure}[httb]
-   \vspace{2em}
-   \centering
-   \includegraphics[scale=0.5]{nstar-tca-feb-2020.jpg}
-   \caption*{\small \em TCA Canadair DC-4M North Star}
-   \label{fig:wall-two}
-\end{figure}
+The extra running costs were mostly borne by Rolls-Royce. When TCA's managing
+director expressed dissatisfaction with the Merlin's commercial performance,
+Hives asked what a reasonable level of maintenance cost would be. Being told
+\$4 per engine hour, he agreed to service the fleet's engines for this amount.
+This early form of 'power by the hour' was initially expensive for Rolls-Royce,
+but by the end of the Merlin's life the company had learned enough to
+supposedly make a small profit at this level.
 
-The extra running costs were mostly borne by Rolls-Royce. When TCA's
-managing director expressed dissatisfaction with the Merlin's
-commercial performance, Hives asked what a reasonable level of
-maintenance cost would be. Being told \$4 per engine hour, he agreed to
-service the fleet's engines for this amount. This early form of 'power
-by the hour' was initially expensive for Rolls-Royce, but by the end of
-the Merlin's life the company had learned enough to supposedly make a
-small profit at this level.
+What was undoubtedly true was that Rolls-Royce learned a great deal about the
+harsh realities of commercial operation in a short time. Hives is supposed to
+have said to TCA, "We didn't know the Merlin until you started operating it!"
+In the longer term, this paid off, TCA — later Air Canada — selecting
+Rolls-Royce engines for its future fleet: Darts in Viscounts, Tynes in
+Vanguards, Conways in DC-8s, and RB211s in TriStars.
 
-What was undoubtedly true was that Rolls-Royce learned a great deal
-about the harsh realities of commercial operation in a short time.
-Hives is supposed to have said to TCA, "We didn't know the Merlin until
-you started operating it!" In the longer term, this paid off,
-TCA---later Air Canada---selecting Rolls--Royce engines for its future
-fleet: Darts in Viscounts, Tynes in Vanguards, Conways in DC-8s, and
-RB211s in TriStars.
-
-
-\begin{footnotesize} \raggedleft PNSAC\\
+\begin{footnotesize}
+  \raggedleft PNSAC\\
 \end{footnotesize}
 
 % End of text.
