--- a/pnsac/newsletter/article_MemberInterview.tex
+++ b/pnsac/newsletter/article_MemberInterview.tex
@@ -5,11 +5,11 @@
 % Head
 
 \title{Our Members}
-\author{Interview with Garry Dupont}
+% \author{Interview with Garry Dupont}
 
 \maketitle
 
-\end{multicols}
+% \end{multicols}
 
 %\begin{quotation}
 %	\textit{Jim Riddoch is one of the earliest and longest serving members of the
@@ -20,99 +20,116 @@
 %needed.}
 %\end{quotation}
 
-\begin{multicols}{2}
+% \begin{multicols}{2}
 
-1.\textit{What is your background in aviation?}
+Readers of the Chronicle will know that this item usually refers to one of our
+members. This edition, however, salutes all of our members who worked as
+volunteers on the restoration of the North Star engines namely:
 
-I graduated from the Confederation College Aircraft Maintenance course
-in the Spring of 1975. After returning to my home town in the Red Lake
-District I gained employment with Red Lake Seaplane Service. After
-completing the course I had to apprentice for 18 months before writing
-the final exam for my Aircraft Maintenance Engineers' License. I
-successfully wrote my final exam in December 1976 and obtained my AME
-certification. In February 1977 I was hired by Perimeter Aviation in
-Winnipeg Manitoba. There I obtained my Turbine Engine and
-Pressurization Aircraft endorsements.  I started my 30 year career with
-the RCMP Air Services Branch in February 1981. My career took me to
-Edmonton Alberta, Goose Bay Labrador, Winnipeg Manitoba then finally to
-Ottawa. I finished my career as Quality Assurance Manager.
+\begin{itemize}
+  \item Charles Baril 
+  \item John Corby (deceased)
+  \item Ted Devey (deceased)
+  \item Ed Hogan
+  \item Peter Houston
+  \item Ron Lemieux
+  \item Richard Lodge
+  \item Wib Neal
+  \item Jim Riddoch
+  \item Stan Rideout
+  \item Ted Slack
+  \item John Tasseron
+  \item Bill Tate
+  \item Tim Timmins
+  \item Giuseppe Zanetti
+\end{itemize}
 
-2. \textit{How long have you been involved with Project North Star and how and
-why did you get involved?}
+The following members have provided comments on their personal experiences.
 
-I attended the very first meeting held for Project North Star. This was
-at my wife's suggestion that it would be a good retirement pastime.
+\textbf{Charles Baril}
 
-%\begin{figure}[htbp]
-%   \vspace{2em}
-%   \centering
-%   %name of the graphic, without the path AND in EPS format:
-%   \includegraphics[scale=0.5]{fwd_cockpit_complete.eps}
-%   %caption of the figure 
-%   \caption*{\small \em Forward cockpit -- complete.}
-%   %label of the figure, which has to correspond to \ref{}:
-%   \label{fig:fwd_cockpit_complete}
-%\end{figure}
+Working on all 4 Merlin engines has been an extremely rewarding experience that
+has taught me a lot about older technology, an appreciation for history
+involved (and those in the engine crew with that knowledge) and learning new
+skills and techniques. Although most of the parts were auxiliary systems,
+seeing them as part of the full engine gives a sense of accomplishment. It is
+very satisfying to see a part going from the dirty, oil covered, rusty part to
+newly refurbished one that looked like it was overhauled in an RCAF maintenance
+depot. It has been an honour to be part of this project and restoration of
+these pieces of history.
 
-3. \textit{What has been the history of your involvement to date?}
+In particular I remember working on the lower cowling flaps.  Trying to undo
+the inner skin was difficult due to longer rivets through the mounts for the
+Flaps. It took several tries and a few extra holes, but it was done. Fixing
+those holes often meant using original methods which was revealing and a
+commitment to historical methods.
 
-While I was employed I worked an evening shift every 4 weeks so I would
-come in to CASM in the morning for a few hours. Upon my retirement Mike
-Irving had me work in the engine shop, which I have been doing since my
-retirement. I also have been on the board of directors for a number of
-years.
+I also recall the work on the filter ducts.  The filter duct is the last stage
+of the air intake before the supercharger. During its cleaning, there was a
+starling nest on top of one filter. This caused a lot of corrosion damage that
+needed to be removed and treated. Yet, what got me was that starlings could get
+that far into the engine.
+
+\textbf{Richard Lodge}
+
+As probably the only volunteer who ever worked in the Aero Engine Division of
+Rolls-Royce in Derby, England, I was greatly interested in becoming involved in
+Project North Star, even though, as an accountant, I had never worked on the
+design or building of an aeroengine.  By the time I started work at Rolls-Royce
+in 1963, new build of Merlin engines had ceased, and only spare parts were
+being manufactured.
+
+I have several strong memories of working on the Merlin engine.  In general,  I
+particularly remember John Tasseron working endlessly on freeing seized piston
+rings.  I learned much from John about patiently working at something which
+appeared to be impossible! Later, when working with  R\'{e}j Demers and Garry
+Dupont, I started to learn how to rivet and how to lock wire. The most
+important lesson for me has been, photograph, photograph, photograph, at each
+stage of dismantling, cleaning and reinstalling an engine part. When sitting in
+an overcrowded office at Rolls-Royce, it never occurred to me that at some time
+in the future I would actually be working on a Merlin engine or working my way
+through an original parts manual to work out how to reassemble an item.  Life
+is certainly full of interesting surprises.
+
+\textbf{John Tasseron}
+ 
+The list below is intended to give a brief overview of the various highlights
+that arose during my participation in the restoration of the second, third and
+fourth Merlin engines:
+
+\begin{enumerate}
+  \item It's not every day one gets the opportunity to see up close what makes
+the Rolls-Royce 620 Series Merlin engine tick!
+  \item It's a real challenge to safely lower each "power egg" down off the
+wing, place it in "the big blue stand" and move it in to the workshop.
+  \item Then starts the process of carefully separating about 11,000 individual
+parts before cleaning, inspecting and re-conditioning them as necessary. Do not
+lose any and make sure everything is photographed for museum records!
+  \item When things unexpectedly go wrong, the real expertise kicks in to
+perhaps develop a repair scheme or even manufacture a brand-new replacement
+part. The objective is to bring everything back together again and end up with
+a "like new" engine, ready for preservation.
+  \item It all takes team effort based on effective communication and
+co-operation. There are no dumb questions and the answers are all aimed at the
+challenge to create an "airworthy" product that will never fly.
+  \item Finally, its important and fun to share the project with a curious
+public, so be ready to answer any questions that might be asked about the
+aircraft and its engines!
+\end{enumerate}
 
 
-%\begin{figure}[htbp]
-%	\vspace{2em}
-%	\centering
-%	%name of the graphic, without the path AND in EPS format:
-%	\includegraphics[scale=0.9]{resources/PNS2008-10-26_23-31-42.png}
-%	%caption of the figure 
-%	\caption*{\small \em Propeller assembly.}
-%	%label of the figure, which has to correspond to \ref{}:
-%	\label{fig:propeller}
-%\end{figure}
 
-%\begin{figure}[htbp]
-%	\vspace{2em}
-%	\centering
-%	%name of the graphic, without the path AND in EPS format:
-%	\includegraphics[scale=1.3]{resources/NorthStarCockpitDec2011.png}
-%	%caption of the figure 
-%	\caption*{\small \em Forward cockpit -- complete.}
-%	%label of the figure, which has to correspond to \ref{}:
-%	\label{fig:fwd_cockpit_complete}
-%\end{figure}
-
-4. \textit{What has been the highlight of your involvement?}
-
-The biggest highlight for me was installing number 2 engine. It was
-about half completed when I started in the engine shop. This is the
-largest engine I have ever installed in my entire career.
-
-%\begin{figure}[htbp]
-%   \vspace{2em}
-%   \centering
-%   %name of the graphic, without the path AND in EPS format:
-%   \includegraphics[scale=0.75]{resources/NavigatorRack.png}
-%   %caption of the figure 
-%   \caption*{\small \em Navigator rack.}
-%   %label of the figure, which has to correspond to \ref{}:
-%   \label{fig:nav-radio-rack}
-%\end{figure}
-
-5. \textit{What has been the most challenging part of your involvement?}
-
-One of the most challenging parts was learning how the engine worked
-with all its systems. I found a RCAF training manual in the office and
-took it home. Over several months of reading I started to understand
-what made this monster of old technology tick. Another challenge was
-learning the British Hardware system and tools. A further challenge was
-reading  the old manuals which were written before they were
-standardized by the ATA chapter system which all aircraft manuals
-follow today. Learning the art of conservation was also a  challenge
-but was made easier by the guidance of Mike Irving.
+%1.\textit{What is your background in aviation?}
+%
+%
+%2. \textit{How long have you been involved with Project North Star and how and
+%why did you get involved?}
+%
+%3. \textit{What has been the history of your involvement to date?}
+%
+%4. \textit{What has been the highlight of your involvement?}
+%
+%5. \textit{What has been the most challenging part of your involvement?}
 
 \begin{footnotesize}
     \raggedleft PNSAC\\
