--- a/pnsac/newsletter/article_PresReport.tex
+++ b/pnsac/newsletter/article_PresReport.tex
@@ -10,84 +10,54 @@
 
 \maketitle
 
-The notes below were written in the middle of February and since that
-time a sad event has taken place in that our old friend and Life Member
-of PNSAC, Ted Devey, has passed away. We have only a few Life Members.
-Such memberships are granted only in circumstances where a member has
-made a special and exceptional contribution to the North Star
-restoration project. Ted Devey was one such member. At 94 years old,
-Ted was our oldest member and the oldest Museum restoration volunteer.
-We will miss Ted, his continuous supply of amusing anecdotes and of
-course his dedication to the North Star restoration project. Ted was
-the subject of "Our Members" section of the January 2019 edition of the
-Chronicle which is available on the Association's website.
+As always, before I start to write the Notes from the President, I reread my
+previous Notes to remind myself of what I had previously said in order to set
+the record straight if necessary. As I write this at the beginning of
+September, I am now aware of the impact of the COVID-19 pandemic on the
+restoration schedule for the North Star and the operations of your
+Association.
 
-Since the last issue of the NStar Chronicle we have taken part in the
-70th Anniversary celebrations of the first non-stop transcontinental
-flight across Canada which was flown by a North Star. Each year work is
-performed on the aircraft which cannot be done outside the Reserve Hangar
-during the winter. The aircraft is also prepared for display to enable the
-public to view the progress made in the last year. After the
-formal part of the celebration, when impressive plaques of the aircraft
-made by our member Chris McGuffin, had been presented to the RCAF and
-the Museum Director General, Chris Kitzan, everybody moved to the
-Reserve Hangar and the aircraft was opened to our association members,
-guests and in the afternoon to 90 members of the public who had
-pre-booked a tour. R\'{e}jean (R\'{e}j) Demers, the Museum Special Project
-Manager, guided the tours assisted by several of our members. Towards
-the end of the tour session someone in the main Museum activated the
-fire alarm. The Museum was promptly evacuated, and the public was
-recommended to go to the Reserve  Hangar until the fire issue had been
-dealt with (it turned out to be a false alarm). Quite unexpectedly R\'{e}j
-and the guides found themselves surrounded by many Museum visitors who
-had not signed up for the North Star tour. Unperturbed by this event,
-R\'{e}j and the guides welcomed the unscheduled visitors and gave them an
-impromptu tour of the aircraft. Both our treasurer and our membership
-secretary were pleased with the days' result!
+Since March, restoration work on the aircraft has been suspended and the
+activities of the Association have been limited. We have, however, been keeping
+in touch with each other through the weekly Zoom meeting organized by the
+Museum's volunteer co-coordinator Cédric St.-Amour. This virtual meeting takes
+place every Thursday at 10 AM EST; it is open to all our volunteers and any
+other PNSAC members who would like to join in.
 
-% We partnered with
-%the Museum for this event and were very pleased to welcome
-%representatives from the RCAF who joined us for the day.
+As previously reported, the North Star project reached a major milestone with
+the completion of the restoration of Engine \#4 which was moved into the
+reserve hangar on a cold December 2019 morning.
 
-As I write this the days are getting longer and R\'{e}j is planning work to
-be done on the aircraft when it is moved outside onto the ramp in the
-spring. Each year we do work on the aircraft which cannot be done
-inside the Reserve Hangar during the winter. We also prepare the
-aircraft for display when, once again, we open the aircraft to enable
-the public to view progress made in the last year.
+Since we are unable to physically meet and there has been no restoration work
+carried out, we felt that a special issue of the NSTAR Chronicle devoted
+entirely to the 15 year restoration of all four of the Merlin engines would be
+of interest to members.
 
-This year the Museum is planning two major display events. The first will be
-on the Doors Open Ottawa weekend (June 6 and 7). This is a great time
-for our members to meet the public, many of whom have an interest in
-aviation. Our second main event, on Canada Day, is enjoyable for all
-the members who sign up to be part of the team meeting the public.
-There are always large crowds, many of them family groups, If any of
-you reading this article would be interested in joining our members for
-either of these events please contact me (my co-ordinates are on the
-back page of this issue of the Chronicle)
+Understandably, with a project which has taken many years. the volunteers
+working on the engines have changed over time. Some have retired or stopped
+volunteering and sadly, some have died. Earlier this year we asked Ted Devey to
+contribute a piece but before writing about of his work, he passed away. Ted
+was involved with restoring all the engines and for several of the early years
+was the volunteer leading the restoration team. Ted was a great raconteur and
+our oldest volunteer at 93 years old. His recollections would have added
+considerably to the interest of this special issue of the NSTAR
+Chronicle.
 
-Shortly before Christmas a major milestone, in the  restoration of the
-North Star, was reached. Work on Merlin engine \#4 was completed and it
-was dragged on its cradle by the Museum forklift truck to the
-Reserve hangar for later mounting on the aircraft to join the other
-three restored engines. Chris McGuffin put some video clips onto our
-Facebook page of the engine being dragged through the Museum parking
-lot and into the hangar. Watch for more of our Facebook messages since
-Chris frequently posts new items.
+After much consideration, the Museum has decided that volunteering cannot
+restart before January 2021. Until then we will continue with our regular Zoom
+meetings and will also organize a virtual Annual General Meeting for the
+Association. We will also continue to provide updates on the situation and much
+will depend upon how the different levels of government handle the ongoing
+recovery from the pandemic.
 
-In the late fall we welcomed the appointment of Erin Secord as the
-Museum's new Manager Conservation Services. She is responsible also for
-conservation of the collections at the Science and Tech Museum. Erin
-has now been able to join us at two of our Members' meetings.
-
-Finally, we are now working to update the Memorandum of Understanding
-between PNSAC and the Museum.  Much has changed since the original
-agreement was signed in May 2006.
-
-Our next Members' Meeting is scheduled for Saturday, June 20, 2020
-which will also be our AGM. Do reserve this date in your calendar if
-you can be in the Ottawa area on that day. The meeting will be held at
-the Canada Aviation and Space Museum. More details will follow later.
+There is an old saying "That it is an ill wind that blows nobody any good."
+This is very true even of this pandemic. One of the very pleasant results is
+having conversations with PNSAC members who don' t reside in the National
+Capital area and have sent membership renewals by mail. Where a renewal has
+been received and confirmation has been delayed as a result of the pandemic, I
+try to call a member on the telephone to explain what is happened and that the
+renewal has not been lost. As a result I have had many interesting phone calls
+with people whom I have never spoken to before. A definite bonus for me.
 
 \begin{footnotesize}
     \raggedleft PNSAC\\
