--- a/pnsac/newsletter/article_ProgReport.tex
+++ b/pnsac/newsletter/article_ProgReport.tex
@@ -6,157 +6,102 @@
 
 \title{Conservator's Corner}
 %\subtitle{PNS 2016 Status Update}
-\author{Bruce Gemmill, R\'{e}jean Demers, and Garry Dupont}
+\author{R\'{e}jean Demers, , AME---Conservator \/ Special Project Manager
+Canada Aviation \& Space Museum}
 %\author{Restoration Project Manager}
 
 \maketitle
 
 %\section{Zen and the Art of Aircraft Restoration.}
 
-The past year was a very busy one for the North Star restoration crew. 
-In the Engine Shop, under the careful watch of Crew Chief Garry Dupont,
-members Charles Baril and Richard Lodge worked to fit the final pieces
-on engine 4 including; all the cowl frames and panels, main and
-auxiliary radiator flaps under the engine, the engine air intake duct
-and associated actuators. All the hard work in setting up sheet metal
-repairs to the cowl panels paid off.  However, fitting the large steel
-exhaust panels around the 12 exhaust stacks was particularly
-challenging. It's no longer a secret that ratchet straps and wooden
-2"x4" blocks have become part of the standard North Star tool kit.
+When touring the shops in the Museum’s Conservation wing, the engine shop is
+reserved for what is referred to as, the “Crown Jewel”. Guests are lead through
+the corridor and the lights are flicked on to reveal a shining piece of
+aeronautical engineering and craftsmanship. The Merlin 622 engine, one of four
+such power plants, sits resplendent. Gasps and expressions of delight from
+guests are guaranteed to insight a prideful glance upon this piece of work by
+volunteers and staff alike. Appearing as if the engine had just been delivered
+from Bristol Aero Ltd. is an illusion. What is this strange magic? How can such
+beauty manifested though steel and aluminum even exist? As any good sorcerer
+will tell, illusion is lost upon the dissolution of mystery. Yet this piece of
+work, a restoration of great effort, time and detail, cannot shed the cloak of
+timelessness so easily. The result of thousands of hours culminate through
+unrelenting intrigue, garnered by all who cast eyes upon the Merlin. These
+words simply scatter as embellishments to the enduring design and purpose,
+which cannot be hidden in all evidence of its greatness. 
 
-While that work was underway, Jacques Roy, Peter Scartozzi and Charles
-Baril were busy stripping equipment, pipes, hose and cables from inside
-the nacelle where engine 4 will soon be installed.  Will Assad and Neil
-Raynor also helped with this. After equipment removal, many hours were
-spent carefully cleaning and removing oil and corrosion prior to
-painting.  In some areas a small bead blasting gun was used to remove
-rust from nuts and bolt heads that could not be taken out for cleaning.
+Referencing an Ottawa Citizen article dated Saturday Feb. 1st, 2003. We read of
+an effort to restore the Canadair North Star to a version of her “former self”
+as PNSAC founder Robert Holmgren put it. A sad, sorry state at the time.
+Destitute to serve as a bird house to the starlings. No mention of any spells
+enacted to summon the aviation gods or mojo hand placed upon the yoke to stir
+the spirits which have tilled the air.  Yet today, she’s a Hangar Queen,
+patiently awaiting final installation of engine \#4. Is this sorcery? No,
+simply the fourth iteration of the Project’s labour of love; Rolls-Royce Merlin
+622, Serial \#309573. The task of accomplishing the finale to a four part, long
+haul repeat restoration of a power plant began in 2014. Looking back at power
+plant restoration cycles, we see the evolution of the Project North Star
+volunteer organization since the early 2000’s. The forming of Engine Shop crews
+and the establishing of Crew Chiefs. The coordination of daily grunt work of
+condition recording, treatment and reassembly of components. Today, members of
+the project continue to develop ideas, adapting to new technology, finding
+different approaches and maintaining a solid work ethic. This spirit remains
+unchanged throughout difficult times and challenges we have encountered. 
 
-Most notably were efforts by Charles Baril, who spent many months
-inside the nacelle; cleaning, inspecting and masking off for painting.
-The work took so long that special heating ducts and insulation needed
-to be positioned around the nacelle to keep it warm enough for R\'{e}jean
-Demers and Bruce Gemmill to apply a coat of primer and silver paint.
+The Tech. log states: Engine installed on North Star 17515 on August 23rd, 1965
+at airframe Total Time of 19845.45 Hrs. with 1121 hours remaining in \#4
+position (4th to the right). The engine had previously flown on 17514 until
+April 30th, 1965 when a broken intake valve \@ \#1 cylinder, “B” bank
+necessitated a repair. Flipping through pages, various signatures, authorities,
+stamps and markings show evidence of a storied service life going back to 1948.
+Engines are shared among power plant “skeletons” which in turn, are shared
+across the fleet. This was one of the major design features of the “Power Egg”
+as the promotional material of the day had put it, interchangeability and ease
+of maintenance. A glance at the log tells me this engine serial number served
+on North Stars 506, 510, 508 and 502 to name a few. The last remaining example
+of its type, North Star 17515 holds pieces of the past, belonging to aircraft
+that have long been gone. Like crew members who have also shared their time
+amongst a fleet that traveled all over the globe, with change-overs,
+turn-arounds and plenty of distance in-between.  
 
-\begin{figure}[httb]
-   \vspace{2em}
-   \centering
-   \includegraphics [scale=0.5]{nacelle-4-paining-outside-feb-2020.png}
-   \caption*{\small \em Painting nacelle \#4 outside}
-   \label{fig:wall-two}
-\end{figure}
+One of the big pay-offs for members of Project North Star is the opportunity to
+display the work carried out by volunteers. Many occasions come to mind, such
+as Canada Day, Doors Open Ottawa and family visits to the Museum. One
+opportunity, of which I will always be grateful to have participated in, was
+such a moment. Myself and a few volunteers met a retired employee of the
+aforementioned Bristol Aero Industries Ltd. who worked at the overhaul shops
+when this engine was undergoing acceptance runs in the early to mid-sixties.
+Quickly, job experience and familiarity with the object was brought forward. A
+quick look under the cowling to reveal preserved markings and decals, evidence
+of original repair shop work was pointed out. “I probably worked on that job”
+he said. I understood at this point, how someone’s work, preserved in such a
+way, could be of intangible value. The history coming around full-circle before
+my eyes, as the gentleman pointed out the ROLLS-ROYCE cast upon the rocker
+covers, saying “it was one of my first jobs, painting on those red letters”. 
 
-Soon after the paint was
-applied, the North Star was moved inside for the winter. This occurred
-November 8th, just 3 days before our first snow storm of the winter.
 
-While all that work was underway, the Airframe Crew was busy on the
-structures work.  Peter Trobridge, Michel Cote and Robert Desjardins
-fabricated and installed several replacement parts for main cabin
-airframe assemblies that had suffered from years of corrosion.  The
-crew accomplished a complete review of necessary repairs from front to
-back of the main cabin. A hole was patched near the door to the crew
-area, at forward bulkhead (station) 301. This offered Chris McGuffin an
-intro to sheet metal repairs. Similar corrosion damage around the
-windows required parts shaped on wooden jigs made in the shop. Through
-careful planning and creative solutions, repairs were completed at STA:
-360, and 381. New repairs carried out at starboard STA: 460, 480, 501,
-541, 560, 621 and currently, floor repairs in the loading area near the
-cargo doors.
+These records, object qualities, historic log entries and our treatment reports
+all add up. We string together these bits of information to form longer chains
+that communicate the history of an artifact. As focal points shift towards
+other areas of interest, or priorities, work carried out in the past helps
+maintain a continued relevance for others to pick-up where we left off. With
+such a long term project, setting the pace is just as important as taking a
+break now and then. Knowing that we had an impact and remembering the
+experiences we’ve shared can carry us through new challenges. It’s a pleasure
+for me to observe a new volunteer work towards acquiring the skills that may be
+passed on to others, like an old wizard speaking to his young apprentice. 
 
-\begin{figure}[httb]
-   \vspace{2em}
-   \centering
-   \includegraphics [scale=0.5]{New-Floor-Wall-Panels-feb-2020.png}
-   \caption*{\small \em New floor and wall panels}
-   \label{fig:wall-two}
-\end{figure}
-
-The Carpentry Crew, led by Chris McGuffin measured, cut and trimmed new
-plywood panels for the interior walls of the main cabin.  These were
-painted green to match the original colour scheme, then set aside until
-for later installation.  Next came the floor panels.  Richard Houle and
-John Makadi assessed these, according to the amount of damage caused by
-wear and tear, as well as leaks around windows and doors.  Some panels
-were salvaged with a few minor repairs, then painted. These are now
-ready for installation.  Several others were so badly damaged that
-completely new panels needed to be made. 
-
-Finally, work started on the third group of panels.  These floor panels
-had significant damage to one or two edges.  The damaged areas need to
-be cut away and a new piece added by bevelling the adjoining pieces
-using what is called a "scarf joint" so the adhesive bond is strong.  A
-special jig was constructed to do this work, allowing an electric
-router to run at an angle to produce the joint. A Resorcinol
-Formaldehyde adhesive will assure a long-lasting repair.
-
-Many of the volunteers got to work on the large collection of
-accessories that had been removed from nacelle \#4.  This included
-pumps, plumbing, fluid and air lines, control cables, bell cranks and
-pulleys, electrical harnesses, valves and filter canisters. Each needed
-assessment, cleaning, repair, polishing or painting as well as
-documentation and photographs of the work undertaken. Phil Chrysler and 
-Brian Cole went to work on the many fairings and
-access panels that also required cleaning and polishing to be ready to
-be placed back on the aircraft. A special mention should be made for the late
-Ted Devey who had had his hand on a few cowl panels and nacelle components.
-
-Several special projects were also undertaken during the year.  John
-Makadi removed the nose radome to determine what radar equipment had
-been removed, in case we are able to find a source for missing
-equipment.  We removed the upper rotating navigation beacon to fix a
-persistent leak, this necessitated a twin tower scaffold assembly to
-safely reach the top of the fuselage. Neil Raynor and Will Assad
-overhauled a propeller stand the Museum had not used for many years. 
-It got a fresh coat of paint and new wheels and tires, and is now
-holding two North Star propellers, until they can be installed on the
-appropriate engine. 
-
-\begin{figure}[httb]
-   \vspace{2em}
-   \centering
-   \includegraphics [scale=0.5]{prop-stand.png}
-   \caption*{\small \em Prop stand}
-   \label{fig:wall-two}
-\end{figure}
-
-Michael Hope
-assisted in removal of Prop. \#1 and assembly of soon-to-be-installed
-Prop. \#4. Phil Chrysler and Brian Cole fabricated cables and special
-fittings to secure the landing gear so the aircraft could be safely
-displayed. Other duties  such as; an inventory of replaced / restored
-and spare components were carried out.  All of these were packed and
-stored in a new location of the Reserve Hangar.
-
-\begin{figure}[httb]
-   \vspace{2em}
-   \centering
-   \includegraphics [scale=0.5]{eng-4-pre-move-feb-2020.png}
-   \caption*{\small \em Engine \#4---before it was moved to the Reserve Hangar}
-   \label{fig:wall-two}
-\end{figure}
-
-Number \#4 engine has now  been moved to the Reserve Hangar. The crew
-are prepping the oil tank for clear coat then it will be assembled and
-ready to install. Once this is completed  the plan is to carry out some
-deep cleaning and renovations in the shop starting  by  relocating the
-varsol cleaning tank. The paint shaker has been repaired and the base
-has been painted ready for assembly. The paint shaker will be relocated
-where the varsol tank was. The old roll away tool box has been replaced
-by a new Snap-On unit. There have been lots of comments on the orange
-colour  but the price was right.
-
-Currently, work is on-going to complete the rear (main) cargo door and
-quilted liner installation. Nacelle \#4 installation of restored
-components is advancing in small steps, due to the complexity of
-interrelated systems and locations. Scaffolding is in place, over the
-forward fuselage area above the cockpit to assess air-frame
-requirements and treatment methods to be used on exterior hull
-surfaces. Restoration records are also being reviewed by Conservation
-Special Project Manager R\'{e}jean Demers. The Work Order / Task Card
-format is lending well to Museum information uploading tools. Efforts
-are underway to recruit two to four new shop volunteers, and R\'{e}j
-invites any new applicants referred by PNSAC to apply.
+I encourage Project North Star members to communicate their interest in the
+project to the public. Generate their own records that may contribute to the
+history of the machine and the lives it affected. This newsletter, social media
+and other forms of reaching out to the public are excellent ways to remember
+one of Canada’s great contributions to air transport. With the tools at our
+disposition, I would not hesitate to believe we can create many new and
+engaging experiences for the public to learn about the role this aircraft
+undertook while in service. Now, in continuation with a sense of national
+pride, the North Star remains an important platform for interpretation of the
+work carried out by dedicated volunteers supported by a museum that understands
+the value of such an artifact. 
 
 \begin{footnotesize}
   \raggedleft PNSAC\\
