--- a/pnsac/newsletter/main_document.tex
+++ b/pnsac/newsletter/main_document.tex
@@ -50,8 +50,8 @@
 \begin{document}
 
 \volume{16} % \volnumber{1}
-\issue{1}
-\date{March 2020} 
+\issue{2}
+\date{September 2020} 
 \titlepage
 
 %\centerline {\Large \textit {Celebrating the 70th Anniversary of the First
@@ -106,11 +106,11 @@
 \pagebreak
 
 % Feature article
-%\begin{article}                 
-%	\input{article_Feature2} 
-%\end{article}
-%
-%\pagebreak
+\begin{article}                 
+	\input{article_Feature2} 
+\end{article}
+
+\pagebreak
 
 % Feature article
 \begin{article}
