--- a/pnsac/newsletter/article_Feature3.tex
+++ b/pnsac/newsletter/article_Feature3.tex
@@ -4,127 +4,84 @@
 
 % Head
 
-\title{A Personal Journey in Support of Homeless Veterans in Canada}
-\author{Neil Raynor}
+\title{North Star Propeller Restorations}
+%\subtitle{Part 4}
+\author{Harry Hope, with assistance from Michael Hope.}
 
 \maketitle
 
-Veterans' House: the Andy Carswell Building is Canada's first "Housing
-First" community built for homeless Veterans. This pioneering project
-specifically targets the needs of the rising number of Veterans who are
-"living rough" in Canada and combines safe housing with essential
-on-site rehabilitation and wrap around support services.
+\textit{Hope Aero has played a major role in the restoration of the North Star.
+The following article provides some background about the company and its work
+on the North Star's propellers. }\\
 
+Hope Aero was formally government approved to certify aircraft propellers in
+1992, at their facility in Mississauga, Ontario. Harry Hope however, already
+had 40 years of propeller overhaul experience on many varieties that included
+Hamilton Standard propellers, which were quite common, as well as Hartzell,
+McCauley, and Sensenich. Harry's first restoration to flying condition, was the
+propeller for the Lysander, which was restored by the Air Force in Winnipeg for
+their Centennial project in 1967. This Lysander is now displayed at CASM. Since
+that time, they have restored several propellers, some to flying condition,
+three are the Lancaster for the Canadian Warplane Heritage, Super Constellation
+(Super Star) for Lufthansa, and the Honningstad C5 Polar for Norway which is on
+display at the Aviation museum in Boda, Norway. 
 
-Who knew? How could we? Surely if we knew we'd have done something
-about it?
+ Since that time, their capabilities have added– MT, Dowty, Hoffman, and
+Hamilton Standard Dash 7 and 8, and later the Dowty propeller on the Q400.  As
+their customer base expanded to include different types of aircraft, the
+requirement for them to service more types became evident. They kept up with
+the required technology.  
 
-Fact: every night in Ottawa between 50 and 85 Veterans are sleeping on
-the streets, in the parks or under bridges in Ottawa. How could that be
-happening in the 21st Century in a G7 capital?
+Along the way, they also expanded into aircraft Wheel and Brake overhaul,
+sales, service and on wing dynamic balancing of fixed wing and Helicopters.
+Harry retired in 2001, but the third generation is now capably looking after
+the business.
 
-Seven years ago a group of people came together within the Multifaith
-Housing Initiative (MHI) to do something about that stat. MHI is a
-federally registered charity based in Ottawa which provides affordable
-housing: currently it has about 140 units with 400 residents scattered
-across the city. What started as a desire to provide affordable housing
-has morphed into an ethos to build communities---Veterans' House is the
-latest iteration of that approach.
+In the spring of 2006, Hope Aero took on the task of restoring the four North
+Star propellers, for the "North Star Restoration" project. The first challenge
+was to remove the propellers from the engines as neither the restoration crew
+nor Hope Aero had any recent experience removing this type of propeller.
+Michael Hope made the trip to Ottawa to assist with this operation and to help
+prevent any damage, which turned out to be exceedingly difficult due to the
+corrosion, starting with the spinner and then the propeller. Once the propeller
+was removed the blades were removed for shipping to Hope Aero. 
 
-What MHI and its volunteer members did was: articulate the need to
-address the issue of homelessness among Veterans; identify the need for
-support for these Veterans that went beyond just housing; and together
-with its partners develop a solution that wraps it all within a
-military community initiative.
+The first 43D50 Hamilton Standard Hydromatic propeller was received at Hope
+Aero in 2006. It was completely disassembled, cleaned and inspected. The
+external parts were very badly corroded, with most damage being to the aluminum
+blades and dome shells, and rust to the steel hub and tail shaft, which was
+likely caused by the outside storage environment. The inside parts were in
+relatively good condition. It was established, that both technical and visual
+effort would be required to restore the propeller to an acceptable display
+condition.
 
-The physical manifestation of MHI's work is the structure being raised
-on the former CFB Rockcliffe airbase called Veterans' House: the Andy
-Carswell Building, a 40-unit community apartment building named for a
-retired WWII RCAF Lancaster pilot who was shot down over Germany in
-1943 and who remained a POW until liberated by allied troops in 1945.
+The restoration work commenced with the blades, the alcohol de-icer feed shoes,
+troughs and paint being removed. The corrosion of the blade surfaces was such
+that removal by grinding was abandoned, as the inner half of the blades are
+shot peened and grinding would remove this and the authenticity. It was decided
+to media blast the complete airfoil surfaces with an aluminum oxide media, thus
+removing the surface corrosion but leaving a good surface for paint to be
+adhered to; an aviation grade grey paint was applied with yellow stripes at the
+tips. New alcohol feed shoes were installed, however the troughs, which direct
+the alcohol to the shoes, were not available. As the troughs are hidden inside
+the spinner, it was determined that they could be omitted.
 
-Uniquely, this "Housing First" initiative will include provision for a
-range of on-site support services focused on the individual needs of
-the residents and provided by MHI's partner organizations who are
-professionals in their fields of work. And being "Housing First" means
-that residents can remain in Veterans' House for an indeterminate
-period and focus on recovery from the underlying issues that
-contributed to their homelessness, be they economic, health, mental
-health or addiction related issues. Moreover, in line with best
-practices in providing affordable housing to this at-risk group, all
-the ground floor bachelor apartments in Veterans' House will be fully
-wheelchair accessible. Again, with a community spirit in mind, the site
-will also include a gym, gardens, service-dog park, and communal
-kitchen and BBQ area for when residents want to share meals together.
+The external hub, barrel halves, spider tail shaft, slinger ring, de-icer
+tubes, and dome retaining nut, were extremely rusty. They were glass bead
+blasted to remove the rust; this did not remove the heavy pitting but did leave
+a surface that could be cadmium plated.  After plating, a clear coat material
+was sprayed on these parts to improve the resistance to rust. The internal
+surfaces were in good condition, and they were well oiled. 
 
-Together with our partners---many of them with direct connections to
-the military and Veterans---Veterans' House: the Andy Carswell Building
-will provide a "military-family" structure to residents which they will
-recognize and which research has shown many homeless Veterans miss and
-which contributes to their slide into homelessness. A fully list of our
-partners, progress to date and lots of other information is on the MHI
-Veterans' House website at
-{\normalfont\color{blue}\texttt{\url{https://www.multifaithhousing.ca/veterans-house}}}
+A replacement dome shell in relatively good condition was found, requiring only
+to be sanded, anodized, and be reinstalled with new seals.
 
+The propeller was then completely assembled to confirm that all the refurbished
+parts fit together. The blades were then removed to facilitate being shipping
+back to the museum.
 
-The physical structure is rising from the ground this spring. We broke
-ground on September 5th, 2019 and 96-year old Squadron Leader (retd)
-Andy Carswell laid the cornerstone on September 16th. As at February
-1st, 2020 we are up to the second floor with completion planned for
-November 2020. There's lots to do but to date we are pretty much on
-schedule despite building through the winter months.
-
-The total cost of the initiative is about \$15.4 million, including \$3
-million for the land which was transferred from the federal government
-as part of its contribution. There is a balance of \$2.3 million still
-left to raise and we are in full fund-raising mode. If you are willing
-and able there are a number of ways you can help financially: you can
-send a cash or stock-transfer donations to Veterans' House through MHI;
-organize a fund-raising event within your community; or leave a bequest
-in your Will. All donations are gratefully received and will be put to
-good use where they will make a difference.
-
-While Veterans' House: the Andy Carswell Building is the first of its
-kind our plan is to create a robust model that can be replicated across
-Canada to address the national issue of homeless Veterans.
-
-For more general info about Multifaith Housing or to make a donation go
-to: www.multifaithhousing.ca You'll find more information there
-including a recently released report on a 2019 Survey of homeless
-Veterans in the National Capital Region.
-
-To volunteer you can apply online. Go to:
-{\normalfont\color{blue}\texttt{\url{https://www.multifaithhousing.ca/volunteer}}}
-
-%\begin{centering}
-%Twinkle, twinkle, old North Star,\\
-%With wrinkled skin and creaky
-%spar,\\
-%For years you've always been on
-%sked,\\
-%As many of our force you've sped\\
-%to distant lands beyond the skies,\\
-%you've never failed to see the rise\\
-%of distant suns or moonrise glare.\\
-%You've carried us with tender care\\
-%-- back you came to take us home,\\
-%from old Japan or France or Rome\\
-%from England, Goose, and Kef.\\
-%We cannot hear you.\\
-%('cause we're deaf)\\
-%\end{centering}
-
-%\begin{figure}[htbp]
-%   \vspace{2em}
-%   \centering
-%   %name of the graphic, without the path AND in EPS format:
-%   \includegraphics[scale=0.5]{jim_jung_2.eps}
-%   %caption of the figure 
-%   \caption*{\small \em A Whispering Giant (North Star 17515) at
-%     Resolute Bay NWT in about 1963, taken by Radio Operator Jim Jung.}
-%   %label of the figure, which has to correspond to \ref{}:
-%   \label{fig:jim_jung}
-%\end{figure}
+All of the four propellers were found to be in similar condition, and all were
+restored in a similar manner.
 
 \begin{footnotesize}
     \raggedleft PNSAC\\
